--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase-admin": "^13.6.1",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
