--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
